# api/resource/tesiscroc_db/utenti.php
@@ -1,0 +1,148 @@
+<?php /** 
+* Generated by
+* 
+*      _____ _          __  __      _     _
+*     / ____| |        / _|/ _|    | |   | |
+*    | (___ | | ____ _| |_| |_ ___ | | __| | ___ _ __
+*     \___ \| |/ / _` |  _|  _/ _ \| |/ _` |/ _ \ '__|
+*     ____) |   < (_| | | | || (_) | | (_| |  __/ |
+*    |_____/|_|\_\__,_|_| |_| \___/|_|\__,_|\___|_|
+*
+* The code generator that works in many programming languages
+*
+*			https://www.skaffolder.com
+*
+*
+* You can generate the code from the command-line
+*       https://npmjs.com/package/skaffolder-cli
+*
+*       npm install -g skaffodler-cli
+*
+*   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+*
+* To remove this comment please upgrade your plan here: 
+*      https://app.skaffolder.com/#!/upgrade
+*
+* Or get up to 70% discount sharing your unique link:
+*       https://app.skaffolder.com/#!/register?friend=5e6fd9d010a37502b05b1d46
+*
+* You will get 10% discount for each one of your friends
+* 
+*/
+?>
+<?php
+	require_once './db/dbtesiscroc_dbManager.php';
+	
+/*
+ * SCHEMA DB utenti
+ * 
+	{
+		email: {
+			type: 'String', 
+			required : true
+		},
+		name: {
+			type: 'String', 
+			required : true
+		},
+		surname: {
+			type: 'String', 
+			required : true
+		},
+		//RELAZIONI
+		
+		
+		//RELAZIONI ESTERNE
+		
+		
+	}
+ * 
+ */
+
+
+//CRUD METHODS
+
+
+//CRUD - CREATE
+
+
+$app->post('/utenti',	function () use ($app){
+
+	$body = json_decode($app->request()->getBody());
+	
+	$params = array (
+		'email'	=> $body->email,
+		'name'	=> $body->name,
+		'surname'	=> $body->surname,
+			);
+
+	$obj = makeQuery("INSERT INTO utenti (_id, email, name, surname )  VALUES ( null, :email, :name, :surname   )", $params, false);
+
+	
+	echo json_encode($body);
+	
+});
+	
+//CRUD - REMOVE
+
+$app->delete('/utenti/:id',	function ($id) use ($app){
+	
+	$params = array (
+		'id'	=> $id,
+	);
+
+	makeQuery("DELETE FROM utenti WHERE _id = :id LIMIT 1", $params);
+
+});
+	
+//CRUD - GET ONE
+	
+$app->get('/utenti/:id',	function ($id) use ($app){
+	$params = array (
+		'id'	=> $id,
+	);
+	
+	$obj = makeQuery("SELECT * FROM utenti WHERE _id = :id LIMIT 1", $params, false);
+	
+	
+	
+	echo json_encode($obj);
+	
+});
+	
+	
+//CRUD - GET LIST
+
+$app->get('/utenti',	function () use ($app){
+	makeQuery("SELECT * FROM utenti");
+});
+
+
+//CRUD - EDIT
+
+$app->post('/utenti/:id',	function ($id) use ($app){
+
+	$body = json_decode($app->request()->getBody());
+	
+	$params = array (
+		'id'	=> $id,
+		'email'	    => $body->email,
+		'name'	    => $body->name,
+		'surname'	    => $body->surname	);
+
+	$obj = makeQuery("UPDATE utenti SET  email = :email,  name = :name,  surname = :surname   WHERE _id = :id LIMIT 1", $params, false);
+
+	
+	echo json_encode($body);
+    	
+});
+
+
+/*
+ * CUSTOM SERVICES
+ *
+ *	These services will be overwritten and implemented in  Custom.js
+ */
+
+			
+?>
