# openapi.yaml
@@ -285,6 +285,167 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/User"
+  /utenti:
+    post:
+      x-skaffolder-id: 5e6feb5110a37502b05b1e04
+      x-skaffolder-name: create
+      x-skaffolder-id-resource: 5e6feaf310a37502b05b1dfb
+      x-skaffolder-resource: utenti
+      x-skaffolder-crudAction: create
+      x-skaffolder-crudType: 
+      x-skaffolder-description: CRUD ACTION create
+      x-skaffolder-returnDesc: 
+      x-skaffolder-returnType: 
+      x-skaffolder-url: /
+      x-skaffolder-roles: []
+      summary: CRUD ACTION create
+      tags:
+        - utenti
+      parameters:
+        - name: obj
+          x-skaffolder-type: utenti
+          in: path
+          description: Object to insert
+          required: true
+          schema:
+            type: utenti
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/utenti"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                name:
+                  type: string
+                surname:
+                  type: string
+    get:
+      x-skaffolder-id: 5e6feb4910a37502b05b1e01
+      x-skaffolder-name: list
+      x-skaffolder-id-resource: 5e6feaf310a37502b05b1dfb
+      x-skaffolder-resource: utenti
+      x-skaffolder-crudAction: list
+      x-skaffolder-crudType: 
+      x-skaffolder-description: CRUD ACTION list
+      x-skaffolder-returnDesc: 
+      x-skaffolder-returnType: ARRAY OF utenti
+      x-skaffolder-url: /
+      x-skaffolder-roles: []
+      summary: CRUD ACTION list
+      tags:
+        - utenti
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/utenti"
+  "/utenti/{id}":
+    delete:
+      x-skaffolder-id: 5e6feb5510a37502b05b1e06
+      x-skaffolder-name: delete
+      x-skaffolder-id-resource: 5e6feaf310a37502b05b1dfb
+      x-skaffolder-resource: utenti
+      x-skaffolder-crudAction: delete
+      x-skaffolder-crudType: 
+      x-skaffolder-description: CRUD ACTION delete
+      x-skaffolder-returnDesc: 
+      x-skaffolder-returnType: 
+      x-skaffolder-url: /{id}
+      x-skaffolder-roles: []
+      summary: CRUD ACTION delete
+      tags:
+        - utenti
+      parameters:
+        - name: id
+          x-skaffolder-type: ObjectId
+          in: path
+          description: Id utenti
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+    get:
+      x-skaffolder-id: 5e6feb3410a37502b05b1dff
+      x-skaffolder-name: get
+      x-skaffolder-id-resource: 5e6feaf310a37502b05b1dfb
+      x-skaffolder-resource: utenti
+      x-skaffolder-crudAction: get
+      x-skaffolder-crudType: 
+      x-skaffolder-description: CRUD ACTION get
+      x-skaffolder-returnDesc: 
+      x-skaffolder-returnType: utenti
+      x-skaffolder-url: /{id}
+      x-skaffolder-roles: []
+      summary: CRUD ACTION get
+      tags:
+        - utenti
+      parameters:
+        - name: id
+          x-skaffolder-type: ObjectId
+          in: path
+          description: Id utenti
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/utenti"
+    post:
+      x-skaffolder-id: 5e6feb4d10a37502b05b1e02
+      x-skaffolder-name: update
+      x-skaffolder-id-resource: 5e6feaf310a37502b05b1dfb
+      x-skaffolder-resource: utenti
+      x-skaffolder-crudAction: update
+      x-skaffolder-crudType: 
+      x-skaffolder-description: CRUD ACTION update
+      x-skaffolder-returnDesc: 
+      x-skaffolder-returnType: utenti
+      x-skaffolder-url: /{id}
+      x-skaffolder-roles: []
+      summary: CRUD ACTION update
+      tags:
+        - utenti
+      parameters:
+        - name: id
+          x-skaffolder-type: ObjectId
+          in: path
+          description: Id utenti
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/utenti"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/utenti"
 security:
   - bearerAuth: []
 components:
@@ -337,63 +498,92 @@ components:
         - nome
         - password
         - username
+    utenti:
+      x-skaffolder-id: 5e6feaf310a37502b05b1dfb
+      x-skaffolder-id-db: 5e6fda7210a37502b05b1d4e
+      x-skaffolder-id-entity: 5e6feaf310a37502b05b1df7
+      x-skaffolder-url: /utenti
+      properties:
+        _id:
+          type: string
+          x-skaffolder-required: true
+        email:
+          type: string
+          x-skaffolder-id-attr: 5e6feaf310a37502b05b1dfa
+          x-skaffolder-type: String
+          x-skaffolder-required: true
+        name:
+          type: string
+          x-skaffolder-id-attr: 5e6feaf310a37502b05b1df8
+          x-skaffolder-type: String
+          x-skaffolder-required: true
+        surname:
+          type: string
+          x-skaffolder-id-attr: 5e6feaf310a37502b05b1df9
+          x-skaffolder-type: String
+          x-skaffolder-required: true
+      x-skaffolder-relations: 
+      required:
+        - _id
+        - email
+        - name
+        - surname
   x-skaffolder-db:
     - x-skaffolder-id: 5e6fda7210a37502b05b1d4e
       x-skaffolder-name: tesiscroc_db
   x-skaffolder-page:
-    - x-skaffolder-id: 5e6fe53c10a37502b05b1ddc
-      x-skaffolder-name: UserEdit
-      x-skaffolder-url: /users/{id}
-      x-skaffolder-template: Edit_Crud
-      x-skaffolder-resource: 5e6fda7210a37502b05b1d57
-      x-skaffolder-services:
-        - 5e6fda7210a37502b05b1d5a
-        - 5e6fda7210a37502b05b1d5c
-        - 5e6fda7210a37502b05b1d61
-      x-skaffolder-nesteds: 
-      x-skaffolder-links: 
-      x-skaffolder-roles: []
-    - x-skaffolder-id: 5e6fe11910a37502b05b1dc5
-      x-skaffolder-name: UserList
-      x-skaffolder-url: /users
-      x-skaffolder-template: List_Crud
-      x-skaffolder-resource: 5e6fda7210a37502b05b1d57
-      x-skaffolder-services:
-        - 5e6fda7210a37502b05b1d5d
-        - 5e6fda7210a37502b05b1d60
-      x-skaffolder-nesteds: 
-      x-skaffolder-links: 
-      x-skaffolder-roles: []
-    - x-skaffolder-id: 5e6fe6cd10a37502b05b1dea
-      x-skaffolder-name: UserListPublic
-      x-skaffolder-url: /public/users
-      x-skaffolder-template: List_Crud
-      x-skaffolder-resource: 5e6fda7210a37502b05b1d57
-      x-skaffolder-services:
-        - 5e6fda7210a37502b05b1d60
-      x-skaffolder-nesteds: 
-      x-skaffolder-links:
-        - 5e6fe11910a37502b05b1dc5
-    - x-skaffolder-id: 5e6fe5e610a37502b05b1de2
-      x-skaffolder-name: home
+    - x-skaffolder-id: 5e6feb6310a37502b05b1e0a
+      x-skaffolder-name: Home
       x-skaffolder-url: /home
       x-skaffolder-template: 
       x-skaffolder-resource: 
       x-skaffolder-services: 
       x-skaffolder-nesteds: 
       x-skaffolder-links:
-        - 5e6fe11910a37502b05b1dc5
-        - 5e6fe53c10a37502b05b1ddc
+        - 5e6feb6310a37502b05b1e09
       x-skaffolder-roles: []
-    - x-skaffolder-id: 5e6fe67710a37502b05b1de7
-      x-skaffolder-name: register
-      x-skaffolder-url: /public/register
+    - x-skaffolder-id: 5e6feabd10a37502b05b1df3
+      x-skaffolder-name: home
+      x-skaffolder-url: /home
       x-skaffolder-template: 
       x-skaffolder-resource: 
-      x-skaffolder-services:
-        - 5e6fda7210a37502b05b1d5c
+      x-skaffolder-services: 
       x-skaffolder-nesteds: 
       x-skaffolder-links: 
+      x-skaffolder-roles: []
+    - x-skaffolder-id: 5e6feb1910a37502b05b1dfe
+      x-skaffolder-name: users
+      x-skaffolder-url: /users
+      x-skaffolder-template: 
+      x-skaffolder-resource: 
+      x-skaffolder-services: 
+      x-skaffolder-nesteds: 
+      x-skaffolder-links: 
+      x-skaffolder-roles: []
+    - x-skaffolder-id: 5e6feb6310a37502b05b1e08
+      x-skaffolder-name: utentiEdit
+      x-skaffolder-url: /utentis/{id}
+      x-skaffolder-template: Edit_Crud
+      x-skaffolder-resource: 5e6feaf310a37502b05b1dfb
+      x-skaffolder-services:
+        - 5e6feb5110a37502b05b1e04
+        - 5e6feb4d10a37502b05b1e02
+        - 5e6feb3410a37502b05b1dff
+      x-skaffolder-nesteds: 
+      x-skaffolder-links: 
+      x-skaffolder-roles: []
+    - x-skaffolder-id: 5e6feb6310a37502b05b1e09
+      x-skaffolder-name: utentiList
+      x-skaffolder-url: /utentis
+      x-skaffolder-template: List_Crud
+      x-skaffolder-resource: 5e6feaf310a37502b05b1dfb
+      x-skaffolder-services:
+        - 5e6feb5510a37502b05b1e06
+        - 5e6feb4910a37502b05b1e01
+      x-skaffolder-nesteds: 
+      x-skaffolder-links:
+        - 5e6feb6310a37502b05b1e08
+      x-skaffolder-roles: []
   x-skaffolder-roles: 
     - x-skaffolder-id: 5e6fda7210a37502b05b1d59
       x-skaffolder-name: ADMIN
